tests/baselines/reference/forwardDeclaredCommonTypes01.errors.txt
forwardDeclaredCommonTypes01.ts(9,5): error TS2554: Expected 1 arguments, but got 0.
forwardDeclaredCommonTypes01.ts(10,5): error TS2350: Only a void function can be called with the 'new' keyword.


==== forwardDeclaredCommonTypes01.ts (2 errors) ====
    interface Promise<T> {}
    interface Symbol {}
    interface Map<K, V> {}
    interface WeakMap<K extends object, V> {}
    interface Set<T> {}
    interface WeakSet<T extends object> {}
    
    (function() {
        new Promise;
        ~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 lib.es2015.promise.d.ts:--:--: An argument for 'executor' was not provided.
        new Symbol; Symbol();
        ~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
        new Map;
        new WeakMap;
        new Set;
        new WeakSet;
    });
    